--- a/app_server/views/travel.hbs
+++ b/app_server/views/travel.hbs
@@ -18,7 +18,7 @@
 							<ul id="sites">
 			{{#each trips}}
 								<li>
-									<a href="/travel"><img src="images/{{this.image}}" alt="Image"></a>
+									<a href="/api/trips/{{this.code}}"><img src="images/{{this.image}}" alt="Image"></a>
 									<h2><a href="/travel">{{this.name}}</a></h2>
 									{{{this.description}}}
 								</li>
